--- a/src/index.tmpl.html
+++ b/src/index.tmpl.html
@@ -1,13 +1,9 @@
 <!doctype html>
 <html lang="en">
-<head>
+  <head>
     <title>Spynejs - Hello World App</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-</head>
-<body>
-
-
-</body>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body></body>
 </html>
