--- a/src/index.tmpl.html
+++ b/src/index.tmpl.html
@@ -1,9 +1,42 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Spynejs - Hello World App</title>
+<head>
+    <title>SpyneJS Base App</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
-  <body></body>
+
+    <!-- Basic Metadata -->
+    <meta name="description" content="A base template for building SpyneJS applications." />
+    <meta name="author" content="Your Name or Organization" />
+
+    <!-- Optional: Open Graph -->
+    <!--
+    <meta property="og:title" content="SpyneJS Base App" />
+    <meta property="og:description" content="A base template for building SpyneJS apps." />
+    <meta property="og:image" content="https://example.com/assets/og-image.png" />
+    <meta property="og:url" content="https://example.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    -->
+
+    <!-- Optional: Favicon & Touch Icon -->
+    <!--
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" />
+    <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png" />
+    -->
+
+    <!-- Optional: Manifest & Theme Color (PWA) -->
+    <!--
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#ffffff" />
+    -->
+</head>
+<body>
+
+<!-- NoScript Fallback -->
+<noscript>
+    You need to enable JavaScript to run this app.
+</noscript>
+
+</body>
 </html>
