updated to latest packages

--- a/src/index.tmpl.html
+++ b/src/index.tmpl.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html lang="en">
-<head>
+  <head>
     <title>SpyneJS Base App</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Basic Metadata -->
-    <meta name="description" content="A base template for building SpyneJS applications." />
+    <meta
+      name="description"
+      content="A base template for building SpyneJS applications."
+    />
     <meta name="author" content="Your Name or Organization" />
 
     <!-- Optional: Open Graph -->
@@ -30,13 +33,9 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#ffffff" />
     -->
-</head>
-<body>
-
-<!-- NoScript Fallback -->
-<noscript>
-    You need to enable JavaScript to run this app.
-</noscript>
-
-</body>
+  </head>
+  <body>
+    <!-- NoScript Fallback -->
+    <noscript> You need to enable JavaScript to run this app. </noscript>
+  </body>
 </html>
