--- a/src/index.tmpl.html
+++ b/src/index.tmpl.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>SpyneJS Base App</title>
+    <title>Spyne Starter App</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
