--- a/src/index.tmpl.html
+++ b/src/index.tmpl.html
@@ -34,20 +34,30 @@
     <meta name="theme-color" content="#ffffff" />
     -->
 
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
 
-    <style>
-      .material-symbols-outlined {
-        font-variation-settings:
-          'FILL' 0,
-          'wght' 400,
-          'GRAD' 0,
-          'opsz' 24;
-      }
-    </style>
+
+      <!-- Subset to only include e145 (add), e15b (remove), e5d5 (refresh) -->
+      <link
+              rel="stylesheet"
+              href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap&text=%EE%85%85%EE%85%9B%EE%97%95"
+      />
+
+      <style>
+          .material-symbols-outlined {
+              font-variation-settings:
+                      'FILL' 0,
+                      'wght' 400,
+                      'GRAD' 0,
+                      'opsz' 24;
+              /* optional: adjust font-size, vertical-align, etc. */
+              font-size: 24px;
+              vertical-align: middle;
+          }
+      </style>
+
+
+
+
   </head>
   <body>
     <!-- NoScript Fallback -->
